POST a school and get a list of schools apis added
