# models/school.js
@@ -1,0 +1,22 @@
+const mongoose = require('mongoose');
+const Schema = mongoose.Schema;
+
+
+//Create school Schema & model
+
+const schoolSchema = new Schema({
+	
+	name:{
+		type:String,
+		required:[true,'School Name filed is required'],
+		unique:true
+	},
+	universityName:{
+		type:String,
+		required:[true,'University name filed is required']
+	}
+});
+
+const School = mongoose.model('school',schoolSchema);
+
+module.exports = School;
